--- a/Poem.html
+++ b/Poem.html
@@ -8,8 +8,8 @@
             <br>I sheltered you from harm
             <br>I gave you hugs so warm
             <br>I thought all of this was magic 
-            <br><br>suddenly it becomes tragic   
-            <br>I know it's not easy, it's not fun
+            <br>suddenly it becomes tragic   
+            <br><br>I know it's not easy, it's not fun
             <br>but thank you for being the one,
             <br>the one that makes me smile
             <br>even if it’s for a while.
