--- a/Poem.html
+++ b/Poem.html
@@ -9,11 +9,11 @@
             <br>I sheltered you from harm
             <br>I gave you hugs so warm
             <br>I thought all of this was magic 
-            <br>suddenly it becomes tragic   
+            <br>Suddenly it becomes tragic   
             <br><br>I know it's not easy, it's not fun
-            <br>but thank you for being the one,
-            <br>the one that makes me smile
-            <br>even if it’s for a while.
+            <br>But thank you for being the one,
+            <br>The one that makes me smile
+            <br>Even if it’s for a while.
         </pr>
   
     </body>
