--- a/markup.html
+++ b/markup.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <p>
-            <br>I sheltered you from harm
-            <br>I gave you hugs so warm
+            <br>I sheltered you from <strong>harm</strong>
+            <br>I gave you hugs so <em>warm</em>
             <br>I thought all of this was <em>magic</em> 
             <br>Suddenly it becomes <strong>tragic</strong>   
-            <br><br>I know it's not easy, it's not fun
+            <br><br>I know it's not easy, it's not <strong>fun</strong>   
             <br>But thank you for being the <strong>one</strong>,
             <br>The one that makes me <em>smile</em>
             <br>Even if it’s for a while.
