Update and rename wishlist.html to Wishlist.html

--- a/Wishlist.html
+++ b/Wishlist.html
@@ -2,13 +2,12 @@
     <head>
         <title>Challenge: Wishlist</title>
         <meta charset="utf-8">
+        <h1>My Wishlist</h1>
     </head>
     <body>
      <ol> 
      <li>cool designs</li>
      <li>put moving images</li>
      </ol>
-    
-       
     </body>
 </html>
