--- a/Wishlist.html
+++ b/Wishlist.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Challenge: Wishlist</title>
+        <title>Wishlist</title>
         <meta charset="utf-8">
         <h1>My Wishlist</h1>
     </head>
