--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,33 @@
         <h1> August 2020 </h1>
     </head>
     <body>
-
-  
+<tr>
+             <td style="color:red">Sun</td>
+             <td style="text-align:center;">Mon</td>
+             <td style="text-align:center;">Tue</td>
+             <td style="text-align:center;">Wed</td>
+             <td style="text-align:center;">Thu</td>
+             <td style="text-align:center;">Fri</td>
+             <td style="text-align:center;">Sat</td>
+            </tr>
+        <tr>
+             <td style="color:red">1</td>
+             <td style="text-align:center;">2</td>
+             <td style="text-align:center;">3</td>
+             <td style="text-align:center;">4</td>
+             <td style="text-align:center;">5</td>
+             <td style="text-align:center;">6</td>
+             <td style="text-align:center;">7</td>
+            </tr>
+    <tr>     
+  <td style="color:red">Sun</td>
+             <td style="text-align:center;">8</td>
+             <td style="text-align:center;">9</td>
+             <td style="text-align:center;">10</td>
+             <td style="text-align:center;">11</td>
+             <td style="text-align:center;">12</td>
+             <td style="text-align:center;">13</td>
+            </tr>
+        
     </body>
 </html>
