--- a/calendar.html
+++ b/calendar.html
@@ -5,33 +5,62 @@
         <h1> August 2020 </h1>
     </head>
     <body>
-<tr>
-             <td style="color:red">Sun</td>
-             <td style="text-align:center;">Mon</td>
-             <td style="text-align:center;">Tue</td>
-             <td style="text-align:center;">Wed</td>
-             <td style="text-align:center;">Thu</td>
-             <td style="text-align:center;">Fri</td>
-             <td style="text-align:center;">Sat</td>
-            </tr>
-        <tr>
-             <td style="color:red">1</td>
-             <td style="text-align:center;">2</td>
-             <td style="text-align:center;">3</td>
-             <td style="text-align:center;">4</td>
-             <td style="text-align:center;">5</td>
-             <td style="text-align:center;">6</td>
-             <td style="text-align:center;">7</td>
-            </tr>
-    <tr>     
-  <td style="color:red">Sun</td>
-             <td style="text-align:center;">8</td>
-             <td style="text-align:center;">9</td>
-             <td style="text-align:center;">10</td>
-             <td style="text-align:center;">11</td>
-             <td style="text-align:center;">12</td>
-             <td style="text-align:center;">13</td>
-            </tr>
+<table>
+       <tr>
+            <td>Sunday</td>
+            <td>Monday</td>
+            <td>Tuesday</td>
+            <td>Wednesday</td>
+            <td>Thursday</td>
+            <td>Friday</td>
+            <td>Saturday</td>
+         </tr>
+       <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+         </tr>
+       <tr>
+            <td>8</td>
+            <td>9</td>
+            <td>10</td>
+            <td>11</td>
+            <td>12</td>
+            <td>13</td>
+            <td>14</td>
+         </tr>
+       <tr>
+            <td>15</td>
+            <td>16</td>
+            <td>17</td>
+            <td>18</td>
+            <td>19</td>
+            <td>20</td>
+            <td>21</td>
+         </tr>
+       <tr>
+            <td>22</td>
+            <td>23</td>
+            <td>24</td>
+            <td>25</td>
+            <td>26</td>
+            <td>27</td>
+            <td>28</td>
+         </tr>
+       <tr>
+            <td>29</td>
+            <td>30</td>
+            <td>31</td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+         </tr>
+        </table>
         
     </body>
 </html>
