--- a/calendar.html
+++ b/calendar.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>The One</title>
+        <title>1999, Calendar</title>
         <meta charset="utf-8">
         <h1> August 2020 </h1>
     </head>
