--- a/calendar.html
+++ b/calendar.html
@@ -2,18 +2,18 @@
     <head>
         <title>1999, Calendar</title>
         <meta charset="utf-8">
-        <h1> August 2020 </h1>
+        <h1> August 1999 </h1>
     </head>
     <body>
-<table>
+<table>{
        <tr>
-            <td>Sunday</td>
-            <td>Monday</td>
-            <td>Tuesday</td>
-            <td>Wednesday</td>
-            <td>Thursday</td>
-            <td>Friday</td>
-            <td>Saturday</td>
+            <td style="text-align:right;>Sun</td>
+            <td>Mon</td>
+            <td>Tue</td>
+            <td>Wed</td>
+            <td>Thu</td>
+            <td>Fri</td>
+            <td>Sat</td>
          </tr>
        <tr>
             <td>1</td>
