--- a/calendar.html
+++ b/calendar.html
@@ -7,7 +7,7 @@
     <body>
 <table>{
        <tr>
-            <td style="text-align:right;>Sun</td>
+            <td style="text-align:right;">Sun</td>
             <td>Mon</td>
             <td>Tue</td>
             <td>Wed</td>
