--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,7 @@
         <h1> August 1999 </h1>
     </head>
     <body>
-<table>{
+<table>
        <tr>
             <td style="text-align:right;">Sun</td>
             <td>Mon</td>
