--- a/calendar.html
+++ b/calendar.html
@@ -7,8 +7,8 @@
     <body>
 <table>
        <tr>
-            <td style="text-align:right;">Sun</td>
-            <td>Mon</td>
+            <td>Sun</td>
+            <td >Mon</td>
             <td>Tue</td>
             <td>Wed</td>
             <td>Thu</td>
@@ -16,49 +16,49 @@
             <td>Sat</td>
          </tr>
        <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-            <td>7</td>
+            <td style="text-align:right;">1</td>
+            <td style="text-align:right;">2</td>
+            <td style="text-align:right;">3</td>
+            <td style="text-align:right;">4</td>
+            <td style="text-align:right;">5</td>
+            <td style="text-align:right;">6</td>
+            <td style="text-align:right;">7</td>
          </tr>
        <tr>
-            <td>8</td>
-            <td>9</td>
-            <td>10</td>
-            <td>11</td>
-            <td>12</td>
-            <td>13</td>
-            <td>14</td>
+            <td style="text-align:right;">8</td>
+            <td style="text-align:right;">9</td>
+            <td style="text-align:right;">10</td>
+            <td style="text-align:right;">11</td>
+            <td style="text-align:right;">12</td>
+            <td style="text-align:right;">13</td>
+            <td style="text-align:right;">14</td>
          </tr>
        <tr>
-            <td>15</td>
-            <td>16</td>
-            <td>17</td>
-            <td>18</td>
-            <td>19</td>
-            <td>20</td>
-            <td>21</td>
+            <td style="text-align:right;">15</td>
+            <td style="text-align:right;">16</td>
+            <td style="text-align:right;">17</td>
+            <td style="text-align:right;">18</td>
+            <td style="text-align:right;">19</td>
+            <td style="text-align:right;">20</td>
+            <td style="text-align:right;">21</td>
          </tr>
        <tr>
-            <td>22</td>
-            <td>23</td>
-            <td>24</td>
-            <td>25</td>
-            <td>26</td>
-            <td>27</td>
-            <td>28</td>
+            <td style="text-align:right;">22</td>
+            <td style="text-align:right;">23</td>
+            <td style="text-align:right;">24</td>
+            <td style="text-align:right;">25</td>
+            <td style="text-align:right;">26</td>
+            <td style="text-align:right;">27</td>
+            <td style="text-align:right;">28</td>
          </tr>
        <tr>
-            <td>29</td>
-            <td>30</td>
-            <td>31</td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
+            <td style="text-align:right;">29</td>
+            <td style="text-align:right;">30</td>
+            <td style="text-align:right;">31</td>
+            <td style="text-align:right;"> </td>
+            <td style="text-align:right;"> </td>
+            <td style="text-align:right;"> </td>
+            <td style="text-align:right;"> </td>
          </tr>
         </table>
         
