--- a/calendar.html
+++ b/calendar.html
@@ -3,6 +3,9 @@
         <title>1999, Calendar</title>
         <meta charset="utf-8">
         <h1> August 1999 </h1>
+        {
+     padding: 5px;
+  }
     </head>
     <body>
 <table>
