--- a/calendar.html
+++ b/calendar.html
@@ -3,9 +3,7 @@
         <title>1999, Calendar</title>
         <meta charset="utf-8">
         <h1> August 1999 </h1>
-        {
-     padding: 5px;
-  }
+ 
     </head>
     <body>
 <table>
@@ -25,7 +23,7 @@
             <td style="text-align:right;">4</td>
             <td style="text-align:right;">5</td>
             <td style="text-align:right;">6</td>
-            <td style="text-align:right;">7</td>
+            <td style="text-align:right;"><div class="circle">7</div></td>
          </tr>
        <tr>
             <td style="text-align:right;">8</td>
