--- a/calendar.html
+++ b/calendar.html
@@ -23,7 +23,7 @@
             <td style="text-align:right;">4</td>
             <td style="text-align:right;">5</td>
             <td style="text-align:right;">6</td>
-            <td style="text-align:right;"><div class="circle">7</div></td>
+            <td style="text-align:right;">7</td>
          </tr>
        <tr>
             <td style="text-align:right;">8</td>
