--- a/vmg.html
+++ b/vmg.html
@@ -11,7 +11,7 @@
     </head>
 <body>
 <video width="400" controls>
-  <source src="https://lcamile.github.io/Camile_WebDev_Midterm/Video_CAMILE.mp4" type="video/mp4">
+  <source src="https://lcamile.github.io/Camile_WebDev_Midterm/video.mp4">
   Your browser does not support HTML video.
 </video>
 <h3>Goals</h3>
