--- a/vmg.html
+++ b/vmg.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-        <title>vmg</title>
+        <title>UIC VMG</title>
         <meta charset="utf-8">
         
    <center>
