--- a/master.html
+++ b/master.html
@@ -104,7 +104,7 @@ a:hover
     <h1 class="title text-center">Master/Detail</h1>
     <div class="md-container">
         <div class="col-3 master">
-            <div class="master-item active-item" onclick="select(this)"><a href="https://lcamile.github.io/Camile_WebDev_Midterm/Poem.html"target="item">Poem</div>
+            <div class="master-item" onclick="select(this)"><a href="https://lcamile.github.io/Camile_WebDev_Midterm/Poem.html"target="item">Poem</div>
             <div class="master-item" onclick="select(this)"><a href="https://lcamile.github.io/Camile_WebDev_Midterm/markup.html"target="item">Markup</div>
             <div class="master-item" onclick="select(this)"><a href="https://lcamile.github.io/Camile_WebDev_Midterm/Wishlist.html"target="item">Wishlist</div>
             <div class="master-item" onclick="select(this)"><a href="https://lcamile.github.io/Camile_WebDev_Midterm/calendar.html"target="item">Calendar</div>
