--- a/calendarwithcss.html
+++ b/calendarwithcss.html
@@ -28,7 +28,7 @@
             <td>4</td>
             <td>5</td>
             <td>6</td>
-            <td>7</td>
+            <td style="color:red">7</td>
          </tr>
        <tr>
             <td>8</td>
