--- a/act42/act424.html
+++ b/act42/act424.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang=”en”>
 <head>
-<link rel=”stylesheet” 
-      type=”text/css” 
-      href=”https://lcamile.github.io/Camile_WebDev_Midterm/act42/act421.css” />
+<link rel="stylesheet" type="text/css" href="https://lcamile.github.io/Camile_WebDev_Midterm/act42/act424.css">
 </head>
 <body>
 
