--- a/act45/testingcss.html
+++ b/act45/testingcss.html
@@ -8,11 +8,11 @@
     <body>
         <header>
             <img src="https://lcamile.github.io/Camile_WebDev_Midterm/act45/dna_square_100x100.png">
-            <h1>Testing CSS</h1>
+           <h1>Testing CSS</h1>
             <nav>
                 <h1>Navigation Menu</h1>
                 <ul>
-                    <li><a href="page1.html">page1</a> – </li>
+                    <li ><a href="page1.html">page1</a> – </li>
                     <li><a href="page2.html">page2</a> – </li>
                     <li><a href="page3.html">page3</a></li>
                 </ul>
@@ -27,11 +27,11 @@
                     <li><a href="http://www.w3schools.com">W3 Schools</a></li>
                     <li><a href="http://www.php.net">Official PHP Website</a></li>
                     <li><a href="http://www.ncbi.nlm.nih.gov/pubmed">Pubmed</a></li>
-                </ul>
+              </ul>
             </div>
             <div>
                 <h2>Daily quote</h2>
-                <div class="quote"> <p>"It is a scientific fact that your body will not absorb cholesterol if you take it from another person’s plate"</p> 
+               <div class="quote"> <p>"It is a scientific fact that your body will not absorb cholesterol if you take it from another person’s plate"</p> 
               </div>
             </div>
         </aside>
@@ -39,13 +39,13 @@
         <p>This page has the purpose of testing CSS. <br>
         What follows is a random list of elements, inserted only because we will style it.
  
-        <ul>
+        <ul class="bodylist">
             <li>First list element</li>
             <li>Second list element</li>
             <li>Third list element</li>
         </ul>
         </p>
-        <h2>Section 1: Web Applications</h2>
+<h2>Section 1: Web Applications</h2>
  
         <p>This is the first section of this page, it is about web applications for Bioinformatics.</p>
  
@@ -53,6 +53,7 @@
         <p>This is the "Input" subsection.<br>
         It focuses on how we get data from the user.<br>
         This is usually done through a web form.</p>
+  <br><br>
         <h3>Output</h3>
         <p>This is the "Output" subsection</p>
  
@@ -67,6 +68,5 @@
             The material on this website is &copy; cellbiol.com
         </footer>
  
-    </body>
+</body>
 </html>
- 
