--- a/act47/tribute.html
+++ b/act47/tribute.html
@@ -1,1 +1,39 @@
 
+ <html>
+
+  <head>
+    <meta charset="utf-8">
+    <title>Google</title>
+    <link rel="stylesheet" type="text/css" href="https://lcamile.github.io/Camile_WebDev_Midterm/act47/tributestyle.css">
+  </head>
+
+  <body>
+    <div class="container">
+  <div class="row">
+    <div class="col-xs-10 big-box" style="background-color: rgba(0, 0, 0, .5)">
+      <br>
+      <h1 class="text-center">Tony Stark</h1>
+      <h2 class="text-center"><em>"Iron Man"</em></h2>
+      <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8 img-box">
+          <img class="img-responsive" src="https://lcamile.github.io/Camile_WebDev_Midterm/act47/endgame-i-am-iron-man.jpg" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8">
+          <p class="text-center">A billionaire industrialist and genius inventor, Tony Stark (Robert Downey, Jr.), is conducting weapons tests overseas, but terrorists kidnap him to force him to build a devastating weapon. Instead, he builds an armored suit and upends his captors. Returning to America, Stark refines the suit and uses it to combat crime and terrorism. </p>
+          <p class="text-center">Tony Stark (Robert Downey Jr.) sacrificed himself in order to save the universe at the end of Avengers: Endgame. He uses all the Infinity Stones to wish Thanos (Josh Brolin) and his army out of existence, but exerts so much strength that he dies in the process. The movie ends with Tony Stark’s funeral, and Captain America (Chris Evans) returns all the Infinity Stones to the places in the timeline where the Avengers stole them from. Nobody will be using the stones to bring Tony back. </p>
+          <hr></hr>
+          <div> 
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/vn5R9xdD_PY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  </body>
+
+  </html>
