--- a/act47/tribute.html
+++ b/act47/tribute.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Google</title>
+    <title>Tribute To Iron Man</title>
     <link rel="stylesheet" type="text/css" href="https://lcamile.github.io/Camile_WebDev_Midterm/act47/tributestyle.css">
   </head>
 
