--- a/Seatwork/calculator.html
+++ b/Seatwork/calculator.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Calculator - Gheorghe Marin Adrian</title>
+        <title>Calculator</title>
        <link rel="stylesheet" type="text/css" href="https://lcamile.github.io/Camile_WebDev_Midterm/Seatwork/calculator.css">
     </head>
     <body>
