--- a/exam/part2a/receiptweb.html
+++ b/exam/part2a/receiptweb.html
@@ -38,8 +38,8 @@
               <td >
                 
                
-              Sparksuite, Inc.<br>
-                                12345 Sunny Road<br>
+              HP, Inc.<br>
+                                 Sunny Road<br>
                                 Sunnyville, CA 12345
               </td>
 
